FE-965 - Fix layout problems with app layout

--- a/src/components/layout/LayoutHibana.module.scss
+++ b/src/components/layout/LayoutHibana.module.scss
@@ -9,6 +9,7 @@
   }
 }
 
+// TODO: This CSS is horrible because of overrides...need to refactor when the OG theme is removed
 .content {
   padding: spacing(800) spacing(400);
 
@@ -17,8 +18,18 @@
   }
 
   .app & {
+    padding: spacing(800) spacing(400);
+
+    @media (min-width: media-query(md)) {
+      padding: spacing(400);
+    }
+
     &.bannerOpen {
-      padding: initial;
+      padding: spacing(800) spacing(400);
+
+      @media (min-width: media-query(md)) {
+        padding: spacing(400);
+      }
     }
   }
 }
